k8s/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: s3-monitor
  labels:
    app: s3-monitor
spec:
  replicas: 1
  revisionHistoryLimit: 3             
  selector:
    matchLabels:
      app: s3-monitor             
  template:                  
    metadata:
      labels:
        app: s3-monitor          
    spec:
      serviceAccountName: s3-monitor-sa
      containers:
        - name: s3-monitor-container
          securityContext:
           runAsNonRoot: true
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
           capabilities:
             drop: ["ALL"]
          image: ECR_IMAGE_PLACEHOLDER #EKS(ECR) - overlays/eks에서 patch로 실제 값 채움
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /livez
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
