k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-monitor
spec:
  type: ClusterIP
  selector:
    app: s3-monitor
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
